src/components/Gameplay/GameplayContainer/GameplayContainer.scss
@import "../../../common/variables";

.active-container-wrapper {
  width: 100%;
  color: #fff;
  text-align: center;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  .close-icon {
    position: absolute;
    top: -50px;
    right: -20px;
    cursor: pointer;
    transition: 0.2s ease-in;

    &:hover {
      opacity: 0.8;
    }
  }

  .active-container-card-wrapper {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 14px;
  }

  .container-bottom-wrapper {
    width: 566px;
    position: relative;
    margin-top: 35px;
    height: 200px;
    background: linear-gradient(180deg, rgba(54, 38, 95, 0.3) 0%, rgba(54, 38, 95, 0) 100%);

    .container-slots {

      .drop-slots-wrapper {
        @include gameplayEmptySlot();

        justify-content: center;

        .drop-slot-component:not(:first-child) {
          margin-left: 27px;
        }
      }
    }
  }
}

